--- a/gui.ipynb
+++ b/gui.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOFJ8bXSN7MFGftNSIaYDr1",
+      "authorship_tag": "ABX9TyPeXFsZlMj3P2talA7wQaPw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,18 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/joaopbarret/English-Final-Project/blob/main/gui.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from fastai.vision.all import *\n",
+        "from fastai.vision.widgets import *"
+      ],
+      "metadata": {
+        "id": "NJTKRvyr45rK"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
