--- a/gui.ipynb
+++ b/gui.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPeXFsZlMj3P2talA7wQaPw",
+      "authorship_tag": "ABX9TyOGb4BqynEBTS3SyWKFM1BM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "outputs": [],
       "source": [
         "path = Path()\n",
-        "learn_inf = load_learner(path/'export.pkl', cpu=True)\n",
+        "learn_inf = load_learner(path/'export(1).pkl', cpu=True)\n",
         "btn_upload = widgets.FileUpload()\n",
         "out_pl = widgets.Output()\n",
         "lbl_pred = widgets.Label()"
